--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,82 @@
+r-cran-digest (0.6.37-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Mon, 19 Aug 2024 17:10:03 -0500
+
+r-cran-digest (0.6.36-1) unstable; urgency=medium
+
+  * New upstream release
+
+  * debian/control: Set (Build-)Depends: to current R version
+  * debian/control: Set Standards-Version: to current version 
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Sun, 23 Jun 2024 20:42:19 -0500
+
+r-cran-digest (0.6.35-1) unstable; urgency=medium
+
+  * New upstream release
+
+  * debian/control: Set (Build-)Depends: to current R version
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Mon, 11 Mar 2024 17:34:47 -0500
+
+r-cran-digest (0.6.34-1) unstable; urgency=medium
+
+  * New upstream release
+
+  * debian/control: Set (Build-)Depends: to current R version
+  * debian/control: Switch to virtual debhelper-compat (= 13)
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Thu, 11 Jan 2024 11:57:44 -0600
+
+r-cran-digest (0.6.33-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Fri, 07 Jul 2023 11:58:04 -0500
+
+r-cran-digest (0.6.32-1) unstable; urgency=medium
+
+  * New upstream release
+
+  * debian/control: Set (Build-)Depends: to current R version
+  * debian/control: Set Standards-Version: to current version 
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Tue, 27 Jun 2023 16:19:01 -0500
+
+r-cran-digest (0.6.31-1) unstable; urgency=medium
+
+  * New upstream release
+
+  * debian/control: Set (Build-)Depends: to current R version
+  * debian/control: Switch to virtual debhelper-compat (= 12)
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Mon, 12 Dec 2022 17:25:54 -0600
+
+r-cran-digest (0.6.30-2) unstable; urgency=medium
+
+  * Source-only rebuild and reupload
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Wed, 19 Oct 2022 09:09:46 -0500
+
+r-cran-digest (0.6.30-1) unstable; urgency=medium
+
+  * New upstream release
+ 
+  * debian/control: Set Build-Depends: to current R version
+  * debian/control: Set Standards-Version: to current version
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Tue, 18 Oct 2022 17:43:11 -0500
+
+r-cran-digest (0.6.29-1) unstable; urgency=medium
+
+  * New upstream release
+ 
+  * debian/control: Set Build-Depends: to current R version
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Wed, 01 Dec 2021 08:11:19 -0600
+
 r-cran-digest (0.6.28-1) unstable; urgency=medium
 
   * New upstream release
